# crux-agent

./: .gitignore  Cargo.toml  README.md  bacon.toml
Android/: settings.gradle
Android/app/: build.gradle
Android/app/src/androidTest/java/me/fraschetti/agent/: ExampleInstrumentedTest.kt
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/java/me/fraschetti/agent/: AppNavigation.kt  Core.kt  MainActivity.kt
Android/app/src/main/java/me/fraschetti/agent/components/buttons/: AudioRecordButton.kt  PrimaryButton.kt
Android/app/src/main/java/me/fraschetti/agent/components/inputs/: TextInput.kt
Android/app/src/main/java/me/fraschetti/agent/screens/: Home.kt
Android/app/src/main/java/me/fraschetti/agent/ui/components/: CircleWaveView.kt
Android/app/src/main/java/me/fraschetti/agent/ui/theme/: Color.kt  Theme.kt  Type.kt
Android/app/src/main/java/me/fraschetti/agent/utils/: BackInput.kt  Navigator.kt  http.kt
Android/app/src/main/res/values/: themes.xml
Android/app/src/test/java/me/fraschetti/agent/: ExampleUnitTest.kt
Android/gradle/: libs.versions.toml
Android/gradle/wrapper/: gradle-wrapper.properties
Android/shared/: build.gradle
Android/shared/src/androidTest/java/me/fraschetti/shared/: ExampleInstrumentedTest.kt
Android/shared/src/main/: AndroidManifest.xml
Android/shared/src/test/java/me/fraschetti/shared/: ExampleUnitTest.kt
agent/: main.py  pyproject.toml
new_shared/: backup1  backup2  uniffi.toml
new_shared/.cargo/: config.toml
new_shared/src/: app.rs  lib.rs
new_shared/src/capabilities/: livekit.rs
shared/: Cargo.toml  build.rs
shared/src/: android_init.rs  app.rs  lib.rs
shared/src/capabilities/: audio.rs  livekit.rs
shared/src/effects/: audio_effects.rs  livekit_effects.rs  mod.rs
shared/src/events/: audio.rs  livekit.rs  mod.rs
shared/src/middleware/: audio_middleware.rs  livekit_handler.rs  mod.rs
shared_backup/: app.rs  backup_apps.rs
shared_backup/.config/: cargo.toml
shared_backup/src/: app.rs  lib.rs
shared_backup/src/capabilities/: audio.rs  livekit.rs  mod.rs  sse.rs
shared_backup/src/events/: audio.rs
shared_backup2/: Cargo.toml  build.rs
shared_backup2/src/: app.rs  lib.rs  utils.rs
shared_backup2/src/capabilities/: livekit.rs
shared_backup2/src/events/: audio.rs
shared_backup2/src/middleware/: audio_middleware.rs  mod.rs
shared_types/: build.rs
