[workspace]
members = [ "shared", "shared_types" ]
resolver = "1"

[workspace.package]
authors = ["Red Badger Consulting Limited"]
edition = "2021"
repository = "https://github.com/redbadger/crux/"
license = "Apache-2.0"
keywords = ["crux", "crux_core", "cross-platform-ui", "ffi", "wasm"]
rust-version = "1.82"

[workspace.dependencies]
anyhow = "^1.0"
# crux_core = "^0.11"
# crux_core = { git = "https://github.com/redbadger/crux", branch = "viktor/middleware-experiment" }
crux_core = { path = "../crux/crux_core" }
crux_http = { path = "../crux/crux_http" }
serde = "^1.0"
