[project]
name = "agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofile>=3.9.0",
    "livekit-agents>=0.12.10",
    "livekit-plugins-deepgram>=0.6.16",
    "livekit-plugins-google>=0.10.1",
    "livekit-plugins-openai[vertex]>=0.10.16",
    "livekit-plugins-rag>=0.2.3",
    "livekit-plugins-silero>=0.7.4",
    "pydub>=0.25.1",
    "python-dotenv>=1.0.1",
    "pytz>=2024.2",
    "pyyaml>=6.0.2",
]
